fix scrollbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -79,7 +79,7 @@ a {
 	padding: 0;
 }
 
-li {
+a {
 	padding: 0;
 }
 
